added the first blog

--- a/index.html
+++ b/index.html
@@ -4,25 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Text Stylish</title>
-    <style>
-        #text {
-            font-size: 20px;
-            font-weight: bold;
-            color: #fe0000;
-            text-align: justify;
-            text-decoration: underline;
-            text-transform: capitalize;
-            line-height: 25px;
-            font-family: "centaur";
-            font-style: italic;
 
-        }
-
-        h2 {
-            text-align: center;
-        }
-    </style>
 
 </head>
 
@@ -39,6 +23,8 @@
         the first true generator on the Internet. It uses a dictionary of over 200 Latin words, combined with a handful
         of model sentence structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem Ipsum is
         therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
+
+    <h1>Syed Amin</h1>
 </body>
 
 </html>
