--- a/index.html
+++ b/index.html
@@ -25,6 +25,15 @@
         therefore always free from repetition, injected humour, or non-characteristic words etc.</p>
 
     <h1>Syed Amin</h1>
+
+    <div>
+        <h2>How to push</h2>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"any meaning full name "</li>
+            <li>git push</li>
+        </ul>
+    </div>
 </body>
 
 </html>
